# surfacerecon

./: README.md  pyproject.toml
examples/: sample_cookie.json  sample_header.json  whitelist_urls.txt
src/surfacerecon/: __init__.py  cli.py  settings.py
src/surfacerecon/analyzer/: __init__.py  diff_analyzer.py  report_generator.py
src/surfacerecon/capture/: __init__.py  playwright_capture.py
src/surfacerecon/generator/: __init__.py  test_generator.py
src/surfacerecon/parser/: __init__.py  har_parser.py  id_inference.py
src/surfacerecon/runner/: __init__.py  test_runner.py
